--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
+    "openai": "^4.2.0",
     "socket.io": "^4.7.1",
     "twilio": "^4.11.2",
     "xss-clean": "^0.1.4"
