--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myIEPBuddy",
+  "name": "my_iep_buddy",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,32 +7,36 @@
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
-  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/codewithemmy/my_IEP_Buddy.git"
+  },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/codewithemmy/my_IEP_Buddy/issues"
+  },
+  "homepage": "https://github.com/codewithemmy/my_IEP_Buddy#readme",
   "dependencies": {
-    "@sendgrid/mail": "^7.7.0",
     "axios": "^1.4.0",
-    "bcrypt": "^5.1.0",
-    "cloudinary": "^1.37.3",
+    "bcrypt": "^5.1.1",
+    "cloudinary": "^1.40.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-validator": "^7.0.1",
-    "handlebars": "^4.7.7",
+    "handlebars": "^4.7.8",
     "helmet": "^7.0.0",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.2.0",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.4.4",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemailer": "^6.9.3",
-    "nodemon": "^2.0.22",
+    "nodemailer": "^6.9.4",
+    "nodemon": "^3.0.1",
     "openai": "^4.2.0",
-    "socket.io": "^4.7.1",
-    "twilio": "^4.11.2",
     "xss-clean": "^0.1.4"
   }
 }
