--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
+    "openai": "^4.2.0",
     "uninstall": "^0.0.0",
     "xss-clean": "^0.1.4"
   }
